# fav_controller

./: .gitignore  .gitmodules  README.md  gazebo_apriltag_tank_world  tags_front_camera.yaml
controllers/: CMakeLists.txt  package.xml  rqt_multiplot.xml
controllers/cfg/: PidControlMinimal.cfg
controllers/launch/: depth_control.launch
controllers/msg/: config_msg.msg
controllers/nodes/: controller.py  depth_calculator.py  depth_pid.py  depth_setpoint.py  reconf_publisher.py
localization/: CMakeLists.txt  package.xml  rqt_multiplot.xml
localization/launch/: lab_test.launch  simulation_test.launch
localization/nodes/: ML_Localization.py.ipynb  localizer.py  path_generator.py
localization/nodes/.ipynb_checkpoints/: ML_Localization.py-checkpoint.ipynb
navigation/: CMakeLists.txt  package.xml
navigation/launch/: liveplot.launch  navigation.launch
navigation/scripts/: LiveTrackingPlot.py  PathFollower.py  YawController.py  test.py
optimization/: CMakeLists.txt  package.xml
optimization/launch/: optimization.launch
optimization/scripts/: Optimizer.py  SimulatedAnnealingOptimizer.py  main.py
path_generation/: CMakeLists.txt  package.xml
path_generation/launch/: path_generation.launch
path_generation/scripts/: PathGenerator.py
path_generation/srv/: GenerateWaypoints.srv
path_planning/: CMakeLists.txt  package.xml
path_planning/launch/: path_planning.launch
path_planning/scripts/: A_star.py  BFS.py  DFS.py  Planner.py  main.py
